v0.33 --Fixed h1 sizing and spacing. --Removed Bella Hotels and another project from the gallery. --Updated descriptions of gallery parts to be slightly more technical.

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -25,7 +25,14 @@ h1 {
   color: transparent;
   background-clip: text;
   background-image: linear-gradient( rgb(221, 228, 232), rgba(255, 255, 255,0.9), rgba(196, 225, 246, 0.8));
-  letter-spacing: -6px;
+  letter-spacing: -5px;
   text-shadow: 3px 3px 2px rgb(6, 19, 93);
 }
 
+@media (max-width: 768px) {
+  h1 {
+    text-shadow: 2px 2px 1px rgb(6, 19, 93);
+    letter-spacing: -2px;
+
+  }
+}
