--- a/src/styles.css
+++ b/src/styles.css
@@ -23,22 +23,21 @@
 
 * {
   box-sizing: border-box;
-  font-size: 20px;
-  font-family: roboto;
+  scroll-behavior: smooth;
   margin: 0%;
   padding: 0%;
   border: 0%;
-  scroll-behavior: smooth;
 }
 
 html, body {
+  background-color: rgb(231, 231, 231);
   color: rgb(0, 0, 0);
   font-weight: 400;
+  font-size: clamp(0.8rem, 1.2vw, 1.4rem);
+  font-family: roboto;
   width: auto;
   margin: 0%;
   padding: 0%;
-  overflow-x: hidden;
-  background-color: rgb(231, 231, 231);
 }
 
 button {
